# Yolov8

./: README.md  README_EN.md
Cpp_Onnx_Samples/: CMakeLists.txt  README.md
Cpp_Onnx_Samples/cmake/: add_dependency.cmake
Cpp_Onnx_Samples/main/: CMakeLists.txt
Cpp_Onnx_Samples/main/include/: main.hpp
Cpp_Onnx_Samples/main/sources/: main.cpp
Cpp_Onnx_Samples/yolo/yolov8/include/: Yolov8.hpp
Cpp_Onnx_Samples/yolo/yolov8/sources/: Yolov8.cpp
Cpp_Python_Samples/cmake/: add_dependency.cmake
Cpp_Python_Samples/main/: CMakeLists.txt
Cpp_Python_Samples/main/sources/: main.cpp
Cpp_Python_Samples/py/: CMakeLists.txt  py.h
Cpp_Python_Samples/py/yolov8/: CMakeLists.txt
Cpp_Python_Samples/py/yolov8/include/: Yolov8.hpp
Cpp_Python_Samples/py/yolov8/py/: Yolov8.py  Yolov8_Onnx.py
Cpp_Python_Samples/py/yolov8/sources/: Yolov8.cpp
Train/: ViewCategory.py  XML2TXT.py  export.py  splitDataset.py  test.py  train.py  val.py
Train/data/: labels.cache  silver.yaml  test.txt  train.txt  val.txt
Train/data/ImageSets/: train.txt  trainval.txt
Train/data/labels/: 3_1.txt  4_1.txt  5_1.txt  6_1.txt  7_1.txt  8_1.txt
cmake/: add_dependency.cmake
get_model/: CMakeLists.txt  gen_wts.py  main.cpp
get_model/include/: config.h
main/: CMakeLists.txt
main/sources/: main.cpp
predict/: CMakeLists.txt
predict/main/: CMakeLists.txt
predict/main/include/: main.hpp
predict/main/sources/: main.cpp
predict/temp/: CMakeLists.txt
predict/yolo/: CMakeLists.txt
predict/yolo/yolov8/include/: Yolov8.hpp
yolo/yolov8/include/: Yolov8.hpp
yolo11trt-v2.0/yolo11trt/get_model/: gen_wts.py  main.cpp
yolo11trt-v2.0/yolo11trt/get_model/include/: config.h
yolo11trt-v2.0/yolo11trt/get_model/src/: block.cpp  model.cpp
yolo11trt-v2.0/yolo11trt/predict/: CMakeLists.txt
yolo11trt-v2.0/yolo11trt/predict/main/include/: main.hpp
yolo11trt-v2.0/yolo11trt/predict/main/sources/: main.cpp
yolo11trt-v2.0/yolo11trt/predict/yolo/: yolo.h
yolo11trt-v2.0/yolo11trt/predict/yolo/yolov8/: CMakeLists.txt
yolo11trt-v2.0/yolo11trt/predict/yolo/yolov8/sources/: Yolov8.cu
yolo_track/Cpp_Python_Samples/: CMakeLists.txt  README.md
yolo_track/Cpp_Python_Samples/cmake/: add_dependency.cmake
yolo_track/Cpp_Python_Samples/main/include/: main.hpp
yolo_track/Cpp_Python_Samples/main/sources/: main.cpp
yolo_track/Cpp_Python_Samples/py/yolov8/include/: Yolov8.hpp
yolo_track/Cpp_Python_Samples/py/yolov8/py/: Yolov8.py  Yolov8_Seg.py  Yolov8_Track.py
yolo_track/Cpp_Python_Samples/py/yolov8/sources/: Yolov8.cpp
yolo_track/yolo_track_py/: test.py  test2.py
yolov11/: CMakeLists.txt  README.md
yolov11/cmake/: add_dependency.cmake
yolov11/main/include/: main.hpp
yolov11/main/sources/: main.cpp
yolov11/yolo/: CMakeLists.txt
yolov11/yolo/yolov8/: CMakeLists.txt
yolov11/yolo/yolov8/include/: Yolov11.hpp
yolov11/yolo/yolov8/sources/: Yolov11.cpp
yolov8_with_python/: CMakeLists.txt  package.xml
yolov8_with_python/cmake/: add_dependency.cmake
yolov8_with_python/main/: CMakeLists.txt
yolov8_with_python/main/include/: main.hpp
yolov8_with_python/main/sources/: main.cpp  test.cpp  yolo_detect.cpp
yolov8_with_python/py/yolov8/include/: Yolov8.hpp
yolov8_with_python/py/yolov8/py/: Yolov8.py  Yolov8_Onnx.py
yolov8_with_python/py/yolov8/sources/: Yolov8.cpp
